--- a/assets/stylesheets/scss/components/_components.hero.scss
+++ b/assets/stylesheets/scss/components/_components.hero.scss
@@ -39,6 +39,8 @@
 
 .hero__title {
 	@extend %heading-settings;
+	@extend %text-break;
+	@extend %text-hyphen;
 	@extend %text-kern;
 	@include responsive-text-size($text-bg-title-hero);
 
